# splines

.github/workflows/: mayhem.yml  sync.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lerp.rs  splines.rs
mayhem/: Dockerfile  Mayhemfile_lerp  Mayhemfile_splines  build.sh  lerp.Mayhemfile  splines.Mayhemfile  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: lerp.rs  splines.rs
mayhem/lerp/testsuite/: seed1  seed2
mayhem/splines/testsuite/: seed1  seed2
